# xChat

./: .gitignore  pyproject.toml
backend/: .env.example  bot.py  config.yaml  models.py  paths.py  server.py
backend/routes/: chat_response.py  dashboard.py  sources.py
frontend/src/components/dashboard/: CreateBot.js
frontend/src/containers/: ChatWindow.js  SetSources.js  Sidebar.js
frontend/src/pages/: create.js  index.js
frontend/src/pages/[bot_slug]/: chat.js
streamlit/: README.md  app.py  config.yaml  hf_client.py
